--- a/data/filetypes.in
+++ b/data/filetypes.in
@@ -21,3 +21,4 @@ octave:.m:::1:^#!/[a-z/]+/octave:0:
 shell:.sh:::1:^#!/[a-z/]+/(ba)?sh$:0:
 tcl:.tcl:::1::0:
 Ruby:.rb:::1::0:
+bfproject:.bfproject:::0::0:
