--- a/doc/source/Makefile
+++ b/doc/source/Makefile
@@ -6,6 +6,10 @@ SHELL = /bin/sh
 BOOK_TOP=.
 BOOK_DIR=${BOOK_TOP}
 OUTPUT_DIR=..
+OUTPUT_FIG=$(OUTPUT_DIR)/figures
+SOURCE_FIG=$(BOOK_DIR)/figures
+OUTPUT_IMG=$(OUTPUT_DIR)/imgs
+SOURCE_IMG=$(BOOK_DIR)/imgs
 TOOLS_DIR=../../../bluefish-doctools
 BOOK_HTML_TARGET=${OUTPUT_DIR}/book.html
 BOOK_PDF_TARGET=${OUTPUT_DIR}/book.pdf
@@ -23,35 +27,41 @@ RUN_FOP=${TOOLS_DIR}/tools/bin/run-fop.sh
 
 all: html pdf ps
 
-html: $(BOOK_ALL_SOURCE)
-	rm -f $(OUTPUT_DIR)/*.html
-	rm -rf $(OUTPUT_DIR)/figures
-	rm -rf $(OUTPUT_DIR)/imgs
+define move-html
+mv *.html $(OUTPUT_DIR)/
+endef
+
+define move-pictures
+mkdir -p $(OUTPUT_FIG)
+mkdir -p $(OUTPUT_IMG)
+cp $(SOURCE_FIG)/*.png $(OUTPUT_FIG)/ 
+cp $(SOURCE_IMG)/*.png $(OUTPUT_IMG)/ 
+endef
+
+html: clean-html $(BOOK_ALL_SOURCE)
 	$(XSLTPROC) $(XSL_HTML_CHUNK) $(BOOK_XML_SOURCE) > $(BOOK_HTML_TARGET)
-	mv *.html $(OUTPUT_DIR)/
-	mv *.html $(OUTPUT_DIR)/
-	mkdir -p $(OUTPUT_DIR)/figures
-	mkdir -p $(OUTPUT_DIR)/imgs
-	cp $(BOOK_DIR)/figures/*.png $(OUTPUT_DIR)/figures/ 
-	cp $(BOOK_DIR)/imgs/*.png $(OUTPUT_DIR)/imgs/ 
-
-
-html-one-big: $(BOOK_ALL_SOURCE)
+	$(move-html)
+	$(move-pictures)
+	
+html-one-big: clean-html $(BOOK_ALL_SOURCE)
 	$(XSLTPROC) $(XSL_HTML) $(BOOK_XML_SOURCE) > $(BOOK_HTML_TARGET)
+	$(move-pictures)
 
-pdf: $(BOOK_ALL_SOURCE)
-	$(XSLTPROC) $(XSL_FO) $(BOOK_XML_SOURCE) > $(BOOK_FO_TARGET)
-	$(RUN_FOP) $(BOOK_TOP) -fo $(BOOK_FO_TARGET) -pdf $(BOOK_PDF_TARGET)
-
-ps: $(BOOK_ALL_SOURCE)
-	$(XSLTPROC) $(XSL_FO) $(BOOK_XML_SOURCE) > $(BOOK_FO_TARGET)
-	$(RUN_FOP) $(BOOK_TOP) -fo $(BOOK_FO_TARGET) -ps $(BOOK_PS_TARGET)
-
-clean:
-	rm -f $(BOOK_HTML_TARGET) $(BOOK_FO_TARGET)
-	rm -f $(BOOK_PDF_TARGET) $(BOOK_PS_TARGET) 
-	rm -f $(BOOK_PDF_TARGET) $(BOOK_PS_TARGET) 
+clean-html:
 	rm -f $(OUTPUT_DIR)/*.html
-	rm -rf $(OUTPUT_DIR)/figures
-	rm -rf $(OUTPUT_DIR)/imgs
+	rm -rf $(OUTPUT_FIG)
+	rm -rf $(OUTPUT_IMG)
 
+clean-pdf:
+	rm -f $(BOOK_PDF_TARGET)
+
+pdf: clean-pdf $(BOOK_ALL_SOURCE) 
+	$(RUN_FOP) $(BOOK_TOP)  -xml $(BOOK_XML_SOURCE) -xsl $(XSL_FO) -pdf $(BOOK_PDF_TARGET)
+	
+ps: clean-ps $(BOOK_ALL_SOURCE)	
+	$(RUN_FOP) $(BOOK_TOP) -xml $(BOOK_XML_SOURCE) -xsl $(XSL_FO) -ps $(BOOK_PS_TARGET)
+
+clean-ps:
+	rm -f $(BOOK_PS_TARGET) 
+
+clean-all: clean-html clean-ps clean-pdf
