--- a/configure.ac
+++ b/configure.ac
@@ -32,6 +32,7 @@ AC_DEFINE_UNQUOTED(CONFIGURE_OPTIONS, "$0 $*")
 
 # these are the languages that will be installed, so these should be finished
 ALL_LINGUAS="da de es fi fr it no pl pt pt_BR ru sr sv zh_CN"
+AC_SUBST(ALL_LINGUAS)
 
 dnl ************************
 dnl Compiler options
