--- a/data/Makefile.in
+++ b/data/Makefile.in
@@ -21,8 +21,8 @@ GNOME2MENU=@GNOME2MENU@
 GNOME2MIMEINFO=@GNOME2MIMEINFO@
 GNOME2APPLICATIONREGISTRY=@GNOME2APPLICATIONREGISTRY@
 GNOME2MIME=@GNOME2MIME@
-UPDATE_MIME=@UPDATE_MIME@
-UPDATE_DESKTOP=@UPDATE_DESKTOP@
+UPDATE_MIME_PATH=@UPDATE_MIME_PATH@
+UPDATE_DESKTOP_PATH=@UPDATE_DESKTOP_PATH@
 
 HAVE_GNOME_VFS=@HAVE_GNOME_VFS@
 
